--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -13,7 +13,7 @@ jobs:
           version: 0.13.0
 
       - name: Format
-        run: zig fmt --check *.zig zml/ models/
+        run: zig fmt --check *.zig src/
       
       - name: Test OpenSSL
         run: zig build test -DUSE_OPENSSL
