--- a/.github/ISSUE_TEMPLATE/1-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug-report.yml
@@ -5,7 +5,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thank you for submitting a bug report. It helps make zigTensor better.
+        Thank you for submitting a bug report. It helps make zSockets better.
 
         Please try to include as much information as possible.
   - type: input
