--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - name: Setup Zig
         uses: goto-bus-stop/setup-zig@v2
@@ -16,8 +18,11 @@ jobs:
         run: zig fmt --check *.zig src/
       
       - name: Test OpenSSL
-        run: zig build test -DUSE_OPENSSL
+        run: zig build test -DUSE_OPENSSL -DUSE_QUIC
       
       - name: Test WolfSSL
-        run: zig build test -DUSE_WOLFSSL
+        run: zig build test -DUSE_WOLFSSL -DUSE_QUIC
+
+      - name: Test BoringSSL
+        run: zig build test -DUSE_BORINGSSL -DUSE_QUIC
         
